Refactored 'getOddNumsAvg' method and updated variable names