@@ -1,12 +1,11 @@
 package practice;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
 import model.Candidate;
 import model.Cat;
 import model.Person;
@@ -20,16 +19,12 @@ public class StreamPractice {
      * If there is no needed data throw RuntimeException with message
      * "Can't get min value from list: < Here is our input 'numbers' >"
      */
-
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
-                .map(i -> i.split(SPLIT_CHARACTER))
-                .map(s -> Arrays.stream(s)
-                        .mapToInt(Integer::parseInt)
-                        .min()
-                        .getAsInt())
+                .flatMap(n -> Arrays.stream(n.split(SPLIT_CHARACTER)))
+                .mapToInt(Integer::parseInt)
                 .filter(n -> n % 2 == 0)
-                .min(Integer::compareTo)
+                .min()
                 .orElseThrow(() ->
                         new RuntimeException("Can't get min value from list: " + numbers));
     }
@@ -40,21 +35,19 @@ public class StreamPractice {
      * But before that subtract 1 from each element on an odd position (having the odd index).
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
-        int sumOfOddElements = IntStream.range(0, numbers.size())
-                .map(i -> i % 2 == 0 ? numbers.get(i) : numbers.get(i) - 1)
-                .filter(n -> n % 2 != 0)
-                .sum();
+        LongSummaryStatistics statistics = IntStream.range(0, numbers.size())
+                .map(i -> i % 2 != 0 ? numbers.get(i) - 1 : numbers.get(i))
+                .filter(n -> n % 2 !=0)
+                .collect(LongSummaryStatistics::new, LongSummaryStatistics::accept ,LongSummaryStatistics::combine);
 
-        long numOfOddElements = IntStream.range(0, numbers.size())
-                .map(i -> i % 2 == 0 ? numbers.get(i) : numbers.get(i) - 1)
-                .filter(n -> n % 2 != 0)
-                .count();
+        long sumOfOddNumbers = statistics.getSum();
+        long countOfOddNumbers = statistics.getCount();
 
-        if (numOfOddElements == 0) {
-            throw new NoSuchElementException("Unexpected numbers");
+        if (countOfOddNumbers == 0) {
+            throw new NoSuchElementException("Division by 0");
         }
 
-        return (double) sumOfOddElements / numOfOddElements;
+        return (double) sumOfOddNumbers / countOfOddNumbers;
     }
 
     /**
@@ -66,10 +59,12 @@ public class StreamPractice {
      * Example: select men who can be recruited to army (from 18 to 27 years old inclusively).
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
+        Predicate<Person> filterMalesByAge = p -> p.getSex() == Person.Sex.MAN
+                && p.getAge() >= fromAge && p.getAge() <= toAge;
+
         return peopleList.stream()
-                .filter(p -> p.getSex() == Person.Sex.MAN
-                        && p.getAge() >= fromAge && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .filter(filterMalesByAge)
+                .toList();
     }
 
     /**
@@ -84,14 +79,14 @@ public class StreamPractice {
      */
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        Predicate<Person> testPerson = p -> (p.getSex() == Person.Sex.MAN
+        Predicate<Person> filterWorkablePeopleByAge = p -> (p.getSex() == Person.Sex.MAN
                 && p.getAge() >= fromAge && p.getAge() <= maleToAge)
                 || (p.getSex() == Person.Sex.WOMAN
                 && p.getAge() >= fromAge && p.getAge() <= femaleToAge);
 
         return peopleList.stream()
-                .filter(testPerson)
-                .collect(Collectors.toList());
+                .filter(filterWorkablePeopleByAge)
+                .toList();
     }
 
     /**
@@ -100,16 +95,16 @@ public class StreamPractice {
      * return the names of all cats whose owners are women from `femaleAge` years old inclusively.
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
-        Predicate<Person> testPerson = p -> !p.getCats().isEmpty()
+        Predicate<Person> filterFemalesByAge = p -> !p.getCats().isEmpty()
                 && p.getSex() == Person.Sex.WOMAN
                 && p.getAge() >= femaleAge;
 
         return peopleList.stream()
-                .filter(testPerson)
+                .filter(filterFemalesByAge)
                 .map(Person::getCats)
                 .flatMap(Collection::stream)
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -125,11 +120,12 @@ public class StreamPractice {
      * parametrized with Candidate in CandidateValidator.
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
-        CandidateValidator test = new CandidateValidator();
+        CandidateValidator candidateValidator = new CandidateValidator();
+
         return candidates.stream()
-                .filter(test)
+                .filter(candidateValidator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
